--- a/common.css
+++ b/common.css
@@ -30,3 +30,26 @@ a:link,a:visited {
 		color: #15ad93;
 	}
 }
+aside{
+	padding: 5px;
+}
+
+@media only screen and (min-width: 180ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
