--- a/common.css
+++ b/common.css
@@ -34,6 +34,18 @@ aside{
 	padding: 5px;
 }
 
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd28938;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			color: #ccc;
+			background-color: #d5d3bf20;
+		}
+	}
+
 @media only screen and (min-width: 180ch) {
 	aside {
 		position: absolute;
@@ -41,15 +53,6 @@ aside{
 		left: 105%;
 		width: 40ch;
 	}
-	aside > details {
-		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
-		background-color: #ffd289;
-	}
 
-	@media (prefers-color-scheme: dark) {
-		aside > details {
-			background-color: #d5d3bf;
-		}
-	}
 }
 
